# auth-adapter

./: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml  compose.yaml
entities/: Cargo.toml
entities/src/: account.rs  lib.rs  prelude.rs  session.rs  user.rs  verification_token.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs  main.rs
src/: db.rs  main.rs  open_api.rs  routes.rs
