[package]
name = "entities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = "0.12.1"
serde = { version = "1.0.181", features = ["derive"] }
utoipa = { version = "3.4.4", features = ["axum_extras"] }
